# todoapi

./: .env  Cargo.toml  README.md  package-lock.json  schema.sql
src/: main.rs
src/db/: init.rs  mod.rs
src/errors/: auth.rs  internal_server.rs  mod.rs
src/errors/validation/: auth.rs  mod.rs
src/init/: mod.rs
src/models/: category.rs  mod.rs  todo.rs  user.rs
src/routes/: auth.rs  helpers.rs  mod.rs
src/validation/: login.rs  mod.rs  registration.rs
