[package]
name = "todoapi"
version = "0.1.0"
authors = ["Jawad W. Ahmed <Jawad.W.Ahmed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
actix-web = "3"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres", "uuid"] }
redis = { version = "0.20", features = ["tokio-comp", "r2d2"] }
r2d2 = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
rust-argon2 = "0.8"
jsonwebtoken = "7"
rand = { version = "0.8", features = ["std_rng"] }
base64 = "0.13"
fancy-regex = "0.5"
lazy_static = "1"
anyhow = "1"
dotenv = "0"
pretty_env_logger = "0.4"