[package]
name = "todoapi"
description = "A fully featured todo-list API written in rust using the actix-web framework and the SQLx toolkit."
version = "0.1.0"
authors = ["Jawad W. Ahmed <Jawad.W.Ahmed@gmail.com>"]
edition = "2018"

[profile.dev]
debug = true
opt-level = 0
lto = "off"

[profile.release]
debug = false
opt-level = 3
lto = "fat"

[dependencies]
anyhow = "1"
actix-web = "3"
base64 = "0.13"
dotenv = "0"
fancy-regex = "0.5"
jsonwebtoken = "7"
lazy_static = "1"
pretty_env_logger = "0.4"
r2d2 = "0.8"
rand = { version = "0.8", features = ["std_rng"] }
redis = { version = "0.20", features = ["tokio-comp", "r2d2"] }
rust-argon2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres", "uuid"] }
time = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
woothee = "0.11"
